--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -21,11 +21,11 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
-        pip install pytest
+        pip install pytest httpx
     
     - name: Run tests
       run: |
-        pytest backend/tests/
+        PYTHONPATH=$PYTHONPATH:$(pwd) pytest backend/tests/
     
     - name: Check code style
       run: |
