--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
-fastapi
-uvicorn[standard]
-pydantic
-python-dotenv
-docker
-python-multipart
+fastapi==0.68.1
+uvicorn==0.15.0
+python-multipart==0.0.5
+httpx==0.24.1
+pytest==7.4.0
+docker==6.1.3
+sqlite3
