--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -25,6 +25,17 @@ jobs:
           pip install -r requirements.txt
           pip install -r requirements-test.txt
 
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
+
+      - name: Build Python Base Image
+        run: |
+          docker build -t lambda_base_python -f backend/docker/python.Dockerfile .
+
+      - name: Build Node Base Image
+        run: |
+          docker build -t lambda_base_node -f backend/docker/node.Dockerfile .
+
       - name: Run Python Unit Tests
         run: |
           PYTHONPATH=$PYTHONPATH:. pytest backend/tests/
