--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,17 @@
-fastapi
-uvicorn[standard]
-pydantic
-python-dotenv
-docker
-python-multipart
+# Core dependencies
+fastapi==0.104.1
+uvicorn[standard]==0.23.2
+pydantic==2.5.2
+python-dotenv==1.0.0
+python-multipart==0.0.6
+docker==6.1.3
+
+# Testing dependencies
+pytest==7.4.0
+pytest-asyncio==0.21.1
+httpx==0.24.1
+requests==2.31.0
+
+# Development tools
+black==25.1.0
+flake8==6.1.0
